--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,8 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "cinefile-r-us",
+    "port": 8889,
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
